# dte3604

./: .gitignore  README.md  clang-format
demo/: CMakeLists.txt  clang-format-old  scenario.cpp  scenario.h  testtorus.h
demo/application/: application.qrc  fboinsgrenderer.cpp  gmlibwrapper.cpp  gmlibwrapper.h  guiapplication.cpp  guiapplication.h  main.cpp  window.cpp  window.h
demo/custom/: blendingspline.c  blendingspline.h  blendingsurface.c  blendingsurface.h  bsplinecustom.c  bsplinecustom.cpp  bsplinecustom.h  ctorus.c  ctorus.h  laneriesenfeldclosed.c  laneriesenfeldclosed.h  lotus.cpp  lotus.h  modelsurface.c  modelsurface.h  subpatch.h
demo/data/: data1.txt  data10.txt  data11.txt  data12.txt  data13.txt  data14.txt  data15.txt  data2.txt  data20.txt  data3.txt  data31.txt  data32.txt  data33.txt  data33a.txt  data34.txt  data35.txt  data4.txt  data5.txt  data6.txt  data7.txt  dataBezCu_1.txt  data_ut20.txt  data_ut21.txt
demo/hidmanager/: defaulthidmanager.cpp  defaulthidmanager.h  hidbinding.h  hidkbmouseinput.cpp  hidmanager.h  hidmanagertreemodel.cpp  hidmanagertreemodel.h  standardhidmanager.cpp  standardhidmanager.h
gmlib/: CMakeLists.txt  README
gmlib/benchmarks/: CMakeLists.txt  core_containers_array_benchmarks.cc  parametrics_pcurve_evaluate_benchmarks.cc
gmlib/cmake/: gmlib-config.cmake.in
gmlib/cmake/legacy_scripts/: config.cmake.in  config_version.cmake.in  doxyfile.in  gen_redirect_header.cmake.in  namespace_header.h.in  redirect_header.h.in  utils.cmake
gmlib/cmake/modules/: FindACML.cmake  FindAPPML.cmake  FindMKL.cmake  FindOpenBLAS.cmake  FindOpenCL.cmake
gmlib/deprecated_modules/core/blas/: CMakeLists.txt
gmlib/deprecated_modules/opencl/: CMakeLists.txt  gmcommandqueue.cpp  gmcommandqueue.h  gmkernel.cpp  gmkernel.h  gmmemory.h  gmopencl.cpp  gmopencl.h  gmprogram.cpp  gmprogram.h  gmsampler.cpp  gmsampler.h
gmlib/deprecated_modules/opencl/memory/: CMakeLists.txt  gmbuffer.cpp  gmbuffer.h  gmbuffergl.cpp  gmbuffergl.h  gmbufferrendergl.cpp  gmbufferrendergl.h  gmimage2d.cpp  gmimage2d.h  gmimage2dgl.cpp  gmimage2dgl.h  gmimage3d.cpp  gmimage3d.h  gmimage3dgl.cpp  gmimage3dgl.h
gmlib/deprecated_modules/script/: CMakeLists.txt  gmscript.cpp  gmscript.h
gmlib/deprecated_modules/script/parametrics/: CMakeLists.txt  gmpluascriptcurve.c  gmpluascriptcurve.h  gmpluascriptsurf.c  gmpluascriptsurf.h
gmlib/deprecated_modules/script/scripts/: pcircle_eval.lua  psphere_eval.lua
gmlib/deprecated_modules/stereolithography/: CMakeLists.txt
gmlib/deprecated_modules/stereolithography/src/: CMakeLists.txt  gmstlobject.cpp  gmstlobject.h
gmlib/deprecated_modules/wavelet/: CMakeLists.txt  gmdwt.c  gmdwt.h  gmfilter.c  gmfilter.h  gmindex.h  gmorthofilter.c  gmorthofilter.h
gmlib/deprecated_modules/wavelet/filters/: CMakeLists.txt  gmfilterfactory.c  gmfilterfactory.h
gmlib/modules/core/: gmglobal.h
gmlib/modules/core/containers/: gmarray.c  gmarray.h  gmarraylx.c  gmarraylx.h  gmarrayt.c  gmarrayt.h  gmdmatrix.c  gmdmatrix.h  gmdvector.c  gmdvector.h  gmdvectorn.c  gmdvectorn.h
gmlib/modules/core/static/: gmstaticproc.c  gmstaticproc.h  gmstaticproc2.c  gmstaticproc2.h
gmlib/modules/core/types/: gmangle.h  gmmatrix.c  gmmatrix.h  gmpoint.c  gmpoint.h  gmsimplex.c  gmsimplex.h  gmsubspace.c  gmsubspace.h
gmlib/modules/core/utils/: gmcolor.cpp  gmcolor.h  gmdivideddifferences.c  gmdivideddifferences.h  gmrandom.c  gmrandom.h  gmsortobject.c  gmsortobject.h  gmstream.cpp  gmstream.h  gmstring.c  gmstring.h  gmtimer.c  gmtimer.h  gmutils.h
gmlib/modules/opengl/: gmbufferobject.cpp  gmbufferobject.h  gmframebufferobject.cpp  gmframebufferobject.h  gmglobject.h  gmopengl.h  gmopenglmanager.cpp  gmopenglmanager.h  gmprogram.cpp  gmprogram.h  gmprogrampipeline.cpp  gmprogrampipeline.h  gmrenderbufferobject.cpp  gmrenderbufferobject.h  gmshader.cpp  gmshader.h  gmtexture.cpp  gmtexture.h
gmlib/modules/opengl/bufferobjects/: gmindexbufferobject.cpp  gmindexbufferobject.h  gmtexturebufferobject.cpp  gmtexturebufferobject.h  gmuniformbufferobject.cpp  gmuniformbufferobject.h  gmvertexbufferobject.cpp  gmvertexbufferobject.h
gmlib/modules/opengl/shaders/: gmcomputeshader.cpp  gmcomputeshader.h  gmfragmentshader.cpp  gmfragmentshader.h  gmgeometryshader.cpp  gmgeometryshader.h  gmtesscontrolshader.cpp  gmtesscontrolshader.h  gmtessevaluationshader.cpp  gmtessevaluationshader.h  gmvertexshader.cpp  gmvertexshader.h
gmlib/modules/opengl/utils/: gmutils.h
gmlib/modules/parametrics/: gmparametrics.c  gmparametrics.h  gmpcurve.c  gmpcurve.h  gmpsurf.c  gmpsurf.h  gmptriangle.c  gmptriangle.h
gmlib/modules/parametrics/curves/: gmparc.c  gmparc.h  gmpbasiscurve.c  gmpbasiscurve.h  gmpbeziercurve.c  gmpbeziercurve.h  gmpbsplinebasiscurve.c  gmpbsplinebasiscurve.h  gmpbsplinecurve.c  gmpbsplinecurve.h  gmpbutterfly.c  gmpbutterfly.h  gmpchrysanthemumcurve.c  gmpchrysanthemumcurve.h  gmpcircle.c  gmpcircle.h  gmperbscurve.c  gmperbscurve.h  gmpline.c  gmpline.h  gmplogspiral.c  gmplogspiral.h  gmprosecurve.c  gmprosecurve.h  gmpsubcurve.c  gmpsubcurve.h  gmpsurfcurve.c  gmpsurfcurve.h  gmptcurve.c  gmptcurve.h  gmptriangcurve.c  gmptriangcurve.h
gmlib/modules/parametrics/evaluators/: gmbasisevaluator.c  gmbasisevaluator.h  gmbasistriangleerbs.c  gmbasistriangleerbs.h  gmbfbsevaluator.c  gmbfbsevaluator.h  gmerbsevaluator.c  gmerbsevaluator.h  gmevaluatorstatic.c  gmevaluatorstatic.h  gmhermite4evaluator.c  gmhermite4evaluator.h
gmlib/modules/parametrics/surfaces/: gmpapple.c  gmpapple.h  (+80 more)
gmlib/modules/scene/: gmscaleobject.h  gmscene.cpp  gmscene.h  gmsceneobject.cpp  gmsceneobject.h  gmvisualizer.cpp  gmvisualizer.h
gmlib/modules/trianglesystem/: gmtrianglesystem.c  gmtrianglesystem.h
gmlib/tests/: CMakeLists.txt  core_containers_dvectorn_tests.cc  core_containers_gmarray_tests.cc  core_static_staticproc_compiletests.cc  parametrics_curves_compiletests.cc  parametrics_object_creation_tests.cc  parametrics_surfaces_compiletests.cc  parametrics_transform_tests.cc  scene_sceneobject_tests.cc
gmlib/tests/testutils/: gmtestutils.h
(+150 files in other folders)
